[package]
name = "aioc_backend"
version = "0.1.0"
authors = ["Sreyas <sreyassreelal@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["handlebars_templates", "serve", "diesel_mysql_pool","json"] }

diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
jsonwebtoken = "1"
rustc-serialize = "0.3"
argon2rs = "0.2.5"
time = "0.2"
serde_json = "1.0.38"
serde = "1.0.86"
serde_derive = "1.0.86"
rand = "0.7"
minihttp = {git = "https://github.com/Sreyas-Sreelal/minihttp"}
